add_executable(conf_devtest conf_devtest.cpp)
target_link_libraries(conf_devtest PUBLIC tango ${CMAKE_DL_LIBS})
add_library(compare_test_object OBJECT compare_test.cpp compare_test.h)
if(USE_PCH)
    tango_target_test_pch(conf_devtest)
    tango_target_test_pch(compare_test_object)
    target_compile_definitions(conf_devtest PRIVATE ${COMMON_TEST_CXX_DEFS})
    target_compile_definitions(compare_test_object PRIVATE ${COMMON_TEST_CXX_DEFS} ${OMNIORB_PKG_CFLAGS_OTHER})
endif()
